--- a/TODO
+++ b/TODO
@@ -1,9 +1,18 @@
+Later:
+    -Add to Grocery List
+    -Add to cookbook (favourites)
+
+For 0.2 release:
+    -Add Recipes Views Count to every recipe
+    -Add Comments to recipes
+    -Add rating (5 star?)
+
 For 0.1 release:
 	-Set up some categories for Foods just like aisles in a store
 	-A cooking instructions section? or is this just another direction but with no associated ingredients?
 	-An optional information section?
-	-Get a rough display of ingredients/directions going - DONE
 	-Prep time and a cook time? (symantic?)
 	-Ordering for directions (and for ingredients?)
-Later:
-	-Restrict things from going into the root categories? later, using limit_choices_to once it is in newforms-admin
+    -Links on ingredients to recipes with that ingredient
+	-Get a rough display of ingredients/directions going - DONE
+    -Serves/makes field?
