--- a/TODO
+++ b/TODO
@@ -16,3 +16,5 @@ For 0.1 release:
 	-Links on ingredients to recipes with that ingredient
 	-Get a rough display of ingredients/directions going - DONE
 	-Serves/makes field?
+
+-Remove "instruction" on each ingredient
